<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageDownload"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/imageDownload">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radiogroup_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radiobutton_glide"
                    style="@style/AppTheme.RadioButton"
                    android:text="@string/option_glide" />

                <RadioButton
                    android:id="@+id/radiobutton_load_app"
                    style="@style/AppTheme.RadioButton"
                    android:text="@string/option_load_app" />

                <RadioButton
                    android:id="@+id/radiobutton_retrofit"
                    style="@style/AppTheme.RadioButton"
                    android:text="@string/option_retrofit" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:primaryBackgroundColor="@color/colorPrimary"
        app:colorPrimaryDark="@color/colorPrimaryDark"
        app:circularProgressColor="@color/colorAccent"
        app:textColor="@color/textColor" />

</androidx.constraintlayout.widget.ConstraintLayout>